WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129421
[ATK] Fix style errors in enum members
https://bugs.webkit.org/show_bug.cgi?id=129421
Summary
[ATK] Fix style errors in enum members
Krzysztof Czech
Reported
2014-02-27 05:12:35 PST
enum members should use InterCaps with an initial capital letter
Attachments
patch
(5.91 KB, patch)
2014-02-27 05:16 PST
,
Krzysztof Czech
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-02-27 05:13:09 PST
<
rdar://problem/16183788
>
Krzysztof Czech
Comment 2
2014-02-27 05:16:01 PST
Created
attachment 225358
[details]
patch
Mario Sanchez Prada
Comment 3
2014-02-27 05:21:49 PST
Comment on
attachment 225358
[details]
patch This is a no-brainer :). Thanks!
WebKit Commit Bot
Comment 4
2014-02-27 06:16:43 PST
Comment on
attachment 225358
[details]
patch Clearing flags on attachment: 225358 Committed
r164802
: <
http://trac.webkit.org/changeset/164802
>
WebKit Commit Bot
Comment 5
2014-02-27 06:16:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug