[ATK] Fix style errors in enum members https://bugs.webkit.org/show_bug.cgi?id=129421

Reviewed by Mario Sanchez Prada.

No new tests. No new functionality.

Enum members should use InterCaps with an initial capital letter.

* accessibility/atk/WebKitAccessibleWrapperAtk.cpp:
(getInterfaceMaskFromObject):


Canonical link: https://commits.webkit.org/147491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164802 268f45cc-cd09-0410-ab3c-d52691b4dbfc