Source/WebCore/accessibility/atk/WebKitAccessibleWrapperAtk.cpp
@@ -1064,50 +1064,50 @@ static const GInterfaceInfo AtkInterfacesInitFunctions[] = {
 };
 
 enum WAIType {
-    WAI_ACTION,
-    WAI_SELECTION,
-    WAI_EDITABLE_TEXT,
-    WAI_TEXT,
-    WAI_COMPONENT,
-    WAI_IMAGE,
-    WAI_TABLE,
+    WAIAction,
+    WAISelection,
+    WAIEditableText,
+    WAIText,
+    WAIComponent,
+    WAIImage,
+    WAITable,
 #if ATK_CHECK_VERSION(2,11,90)
-    WAI_TABLE_CELL,
+    WAITableCell,
 #endif
-    WAI_HYPERTEXT,
-    WAI_HYPERLINK,
-    WAI_DOCUMENT,
-    WAI_VALUE,
+    WAIHypertext,
+    WAIHyperlink,
+    WAIDocument,
+    WAIValue,
 };
 
 static GType GetAtkInterfaceTypeFromWAIType(WAIType type)
 {
     switch (type) {
-    case WAI_ACTION:
+    case WAIAction:
         return ATK_TYPE_ACTION;
-    case WAI_SELECTION:
+    case WAISelection:
         return ATK_TYPE_SELECTION;
-    case WAI_EDITABLE_TEXT:
+    case WAIEditableText:
         return ATK_TYPE_EDITABLE_TEXT;
-    case WAI_TEXT:
+    case WAIText:
         return ATK_TYPE_TEXT;
-    case WAI_COMPONENT:
+    case WAIComponent:
         return ATK_TYPE_COMPONENT;
-    case WAI_IMAGE:
+    case WAIImage:
         return ATK_TYPE_IMAGE;
-    case WAI_TABLE:
+    case WAITable:
         return ATK_TYPE_TABLE;
 #if ATK_CHECK_VERSION(2,11,90)
-    case WAI_TABLE_CELL:
+    case WAITableCell:
         return ATK_TYPE_TABLE_CELL;
 #endif
-    case WAI_HYPERTEXT:
+    case WAIHypertext:
         return ATK_TYPE_HYPERTEXT;
-    case WAI_HYPERLINK:
+    case WAIHyperlink:
         return ATK_TYPE_HYPERLINK_IMPL;
-    case WAI_DOCUMENT:
+    case WAIDocument:
         return ATK_TYPE_DOCUMENT;
-    case WAI_VALUE:
+    case WAIValue:
         return ATK_TYPE_VALUE;
     }
 
@@ -1124,7 +1124,7 @@ static guint16 getInterfaceMaskFromObject(AccessibilityObject* coreObject)
     guint16 interfaceMask = 0;
 
     // Component interface is always supported
-    interfaceMask |= 1 << WAI_COMPONENT;
+    interfaceMask |= 1 << WAIComponent;
 
     AccessibilityRole role = coreObject->roleValue();
 
@@ -1134,11 +1134,11 @@ static guint16 getInterfaceMaskFromObject(AccessibilityObject* coreObject)
     // object, and only supports having one action per object), it is
     // better just to implement this interface for every instance of
     // the WebKitAccessible class and let WebCore decide what to do.
-    interfaceMask |= 1 << WAI_ACTION;
+    interfaceMask |= 1 << WAIAction;
 
     // Selection
     if (coreObject->isListBox() || coreObject->isMenuList())
-        interfaceMask |= 1 << WAI_SELECTION;
+        interfaceMask |= 1 << WAISelection;
 
     // Get renderer if available.
     RenderObject* renderer = 0;
@@ -1147,21 +1147,21 @@ static guint16 getInterfaceMaskFromObject(AccessibilityObject* coreObject)
 
     // Hyperlink (links and embedded objects).
     if (coreObject->isLink() || (renderer && renderer->isReplaced()))
-        interfaceMask |= 1 << WAI_HYPERLINK;
+        interfaceMask |= 1 << WAIHyperlink;
 
     // Text & Editable Text
     if (role == StaticTextRole || coreObject->isMenuListOption())
-        interfaceMask |= 1 << WAI_TEXT;
+        interfaceMask |= 1 << WAIText;
     else {
         if (coreObject->isTextControl()) {
-            interfaceMask |= 1 << WAI_TEXT;
+            interfaceMask |= 1 << WAIText;
             if (!coreObject->isReadOnly())
-                interfaceMask |= 1 << WAI_EDITABLE_TEXT;
+                interfaceMask |= 1 << WAIEditableText;
         } else {
             if (role != TableRole) {
-                interfaceMask |= 1 << WAI_HYPERTEXT;
+                interfaceMask |= 1 << WAIHypertext;
                 if ((renderer && renderer->childrenInline()) || roleIsTextType(role))
-                    interfaceMask |= 1 << WAI_TEXT;
+                    interfaceMask |= 1 << WAIText;
             }
 
             // Add the TEXT interface for list items whose
@@ -1178,29 +1178,29 @@ static guint16 getInterfaceMaskFromObject(AccessibilityObject* coreObject)
 
     // Image
     if (coreObject->isImage())
-        interfaceMask |= 1 << WAI_IMAGE;
+        interfaceMask |= 1 << WAIImage;
 
     // Table
     if (role == TableRole)
-        interfaceMask |= 1 << WAI_TABLE;
+        interfaceMask |= 1 << WAITable;
 
 #if ATK_CHECK_VERSION(2,11,90)
     if (role == CellRole)
-        interfaceMask |= 1 << WAI_TABLE_CELL;
+        interfaceMask |= 1 << WAITableCell;
 #endif
 
     // Document
     if (role == WebAreaRole)
-        interfaceMask |= 1 << WAI_DOCUMENT;
+        interfaceMask |= 1 << WAIDocument;
 
     // Value
     if (role == SliderRole || role == SpinButtonRole || role == ScrollBarRole || role == ProgressIndicatorRole)
-        interfaceMask |= 1 << WAI_VALUE;
+        interfaceMask |= 1 << WAIValue;
 
 #if ENABLE(INPUT_TYPE_COLOR)
     // Color type.
     if (role == ColorWellRole)
-        interfaceMask |= 1 << WAI_TEXT;
+        interfaceMask |= 1 << WAIText;
 #endif
 
     return interfaceMask;
